--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Stack Trust&Sincerity"
     />
+
+    <!--추가설정 (ie11 호환)-->
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
@@ -30,6 +33,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>조적STS - Stack Trust&Sincerity</title>
+    <meta name="title" property="og:title" content="조적STS" /> 
+    <meta name="description" property="og:description" content="Stack Trust&Sincerity"/> 
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/ogLogo.png" /> 
+    <meta name="url" property="og:url" content="https://stacksts.firebaseapp.com/" />
+
   </head>
   <body>
     <div id="root"></div>
