--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta
-  name="viewport"
-  content="minimum-scale=1, initial-scale=1, width=device-width"
-/>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Stack Trust&Sincerity"
-    />
+    <meta name="description" content="Stack Trust&Sincerity" />
 
     <!--추가설정 (ie11 호환)-->
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
@@ -33,11 +27,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>조적STS - Stack Trust&Sincerity</title>
-    <meta name="title" property="og:title" content="조적STS" /> 
-    <meta name="description" property="og:description" content="Stack Trust&Sincerity"/> 
-    <meta name="image" property="og:image" content="%PUBLIC_URL%/ogLogo.png" /> 
+    <meta name="title" property="og:title" content="조적STS" />
+    <meta name="description" property="og:description" content="Stack Trust&Sincerity" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/ogLogo.png" />
     <meta name="url" property="og:url" content="https://stacksts.firebaseapp.com/" />
 
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
